<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.settings.SettingsFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_settings"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/main_color"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/ll_one"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_settings">

            <ImageView
                android:id="@+id/iv_lan"
                android:layout_width="24dp"
                android:layout_marginBottom="1dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_language"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/tv_lan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languages"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"/>

        </LinearLayout>
        <View
            android:id="@+id/v_one"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#C8C8C3"

            app:layout_constraintTop_toBottomOf="@id/ll_one"/>


        <LinearLayout
            android:id="@+id/ll_two"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_one">

            <ImageView
                android:id="@+id/iv_notifi"
                android:layout_width="24dp"
                android:layout_marginBottom="1dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_notifi"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/tv_notifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"/>

            <Switch
                android:id="@+id/notifi_swich"
                android:layout_width="45dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:checked="true"
                android:layout_marginStart="175dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <View
            android:id="@+id/v_two"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#C8C8C3"
            app:layout_constraintTop_toBottomOf="@id/ll_two"/>

        <LinearLayout
            android:id="@+id/ll_three"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_two">

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="24dp"
                android:layout_marginBottom="1dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_share"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"/>

        </LinearLayout>
        <View
            android:id="@+id/v_three"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#C8C8C3"
            app:layout_constraintTop_toBottomOf="@id/ll_three"/>

        <LinearLayout
            android:id="@+id/ll_four"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_three">

            <ImageView
                android:id="@+id/iv_about"
                android:layout_width="24dp"
                android:layout_marginBottom="1dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_about"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_the_application"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"/>

        </LinearLayout>
        <View
            android:id="@+id/v_four"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#C8C8C3"
            app:layout_constraintTop_toBottomOf="@id/ll_four"/>


        <LinearLayout
            android:id="@+id/ll_five"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_four">

            <ImageView
                android:id="@+id/iv_app"
                android:layout_width="24dp"
                android:layout_marginBottom="1dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_app"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/tv_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/application"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"/>

        </LinearLayout>
        <View
            android:id="@+id/v_five"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#C8C8C3"
            app:layout_constraintTop_toBottomOf="@id/ll_five"/>

        <LinearLayout
            android:id="@+id/ll_six"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_five">

            <ImageView
                android:id="@+id/iv_contact"
                android:layout_width="24dp"
                android:layout_marginBottom="1dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_contact"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/tv_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:textColor="@color/black"/>

        </LinearLayout>
        <View
            android:id="@+id/v_six"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#C8C8C3"
            app:layout_constraintTop_toBottomOf="@id/ll_six"/>
    </androidx.constraintlayout.widget.ConstraintLayout>