<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.filter.FilterFragment">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_filter"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_fil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/filtration"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/iv_back_fil"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon_back_fil"/>
        </androidx.appcompat.widget.Toolbar>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cv_fil_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintTop_toBottomOf="@id/tb_filter">

            <AutoCompleteTextView
                android:id="@+id/tv_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="none"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_price_min"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_fil_one"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="105dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_price_min"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textColor="#120D0D"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_price_max"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/cv_fil_one"
            app:layout_constraintStart_toEndOf="@id/il_price_min"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_price_max"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textColor="#120D0D"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_clear"
            android:layout_width="160dp"
            android:layout_height="50dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/il_price_min"
            android:layout_marginStart="15dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/black"
            android:textColor="@color/black"
            app:cornerRadius="5dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="105dp">

            <TextView
                android:id="@+id/tv_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/black" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update"
            android:layout_width="175dp"
            android:layout_height="62dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/apply"
            android:backgroundTint="#227E72"
            app:layout_constraintTop_toBottomOf="@id/il_price_max"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>